--- a/app/src/main/res/layout/activity_book_list.xml
+++ b/app/src/main/res/layout/activity_book_list.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".BookListActivity">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
     <TextView
         android:id="@+id/tvResponse"
         android:layout_width="wrap_content"
@@ -14,7 +19,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+    </ScrollView>
     <ProgressBar
         android:id="@+id/pb_loading"
         style="?android:attr/progressBarStyle"
